# fakedns

./: .gitignore  Cargo.toml  Makefile  README.md
deploy/launch/: com.fakedns.plist
deploy/scripts/: build_conf.sh  process_domains.py  update_data.sh
src/: dns.rs  main.rs  payload.rs  trie.rs
src/macros/: mod.rs  timeout.rs
src/trie/: domain_trie.rs  mod.rs  trie.rs
tests/: out-release.txt  queries.txt  test.sh
