[package]
name = "fakedns"
version = "0.1.1"
edition = "2021"
default-run = "fakedns"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1.48.0", features = [
    "macros",
    "sync",
    "rt-multi-thread",
    "rt",
    "net",
    "io-util",
    "time",
] }
tracing = { version = "0.1.41" }

# console mode
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"], optional = true}
console-subscriber = { version = "0.5.0", optional = true }
ahash = "0.8.12"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[features]
console = [
    "tokio/tracing",
    "tracing-subscriber",
    "console-subscriber",
]
